[package]
name = "aniero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
image = { version = "0.24.5", features = ["png"] }
